# avance

./: CMakeLists.txt
src/: main.cpp
src/logic/: Node.cpp  Persona.cpp
src/logic/includes/: Node.h  Persona.h
